# Hpx-Vision

./: .gitignore  CMakeLists.txt  README.md  launch_vision.sh
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: ForceGraph.jsx
examples/: demo.cpp  vision_demo.cpp  vision_simulation.cpp  vision_standalone_proof.cpp  vision_unit_test.cpp
include/hpx/: vision.hpp
include/hpx/components_base/: macros.hpp
include/hpx/vision/: action_wrapper.hpp  causality_id.hpp  context.hpp  data_exporter.hpp  dist_sync.hpp  distributed_sync.hpp  future_wrapper.hpp  hook_manager.hpp  metadata_manager.hpp  metrics.hpp  observer.hpp  otel_tracer.hpp  parcel_interceptor.hpp  security.hpp  wfg.hpp
mock_hpx/hpx/: config.hpp  hpx.hpp
mock_hpx/hpx/modules/: naming_base.hpp  synchronization.hpp
src/: context.cpp
src/detector/: stall_detector.cpp
src/graph/: wfg.cpp
src/hooks/: dist_sync.cpp  hook_manager.cpp  thread_hooks.cpp
src/visualization/: mermaid_exporter.cpp
